added search and some designe

--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>TravelTip</title>
-</head>
-<body>
-    <h1>TravelTip Starter</h1>
-    <div id="map" style="width: 100%; height: 400px;"></div>
-    <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
-    <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
-    <!-- <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button> -->
-    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
-
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="logo">TravelTip Starter</div>
+      <div class="header-actions-container">
+        <form onsubmit="onAddressSearch(event)">
+          <div class="search-bar">
+            <input
+              name="search"
+              class="search-bar-input"
+              type="search"
+              placeholder="Type your search here..."
+              autocomplete="off"
+            />
+            <button
+              type="submit"
+              class="search-bar-input-btn"
+              style="background-image: url(/img/search.png)"
+            ></button>
+          </div>
+        </form>
+        <button onclick="onGetUserPos()" class="btn-user-pos">
+          Go to your location
+        </button>
+      </div>
+    </header>
+    <div id="map" style="width: 100%; height: 400px"></div>
     <p>You are at: <span class="user-pos"></span></p>
-    <p>Locations: 
-        <pre class="locs"></pre>
-    </p>
-    
-
+    <section class="saved-locations-container">
+      <span class="saved-locations-title">Yor Saved Locations:</span>
+      <pre class="locs container"></pre>
+    </section>
     <script type="module" src="js/app.controller.js"></script>
-</body>
+  </body>
 </html>
