added infowindow input name update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <p>You are at: <span class="user-pos"></span></p>
     <section class="saved-locations-container">
       <span class="saved-locations-title">Yor Saved Locations:</span>
-      <pre class="locs container"></pre>
+      <section class="locs container">
+        <table class="locs-table rwd-table"></table>
+      </section>
     </section>
     <script type="module" src="js/app.controller.js"></script>
   </body>
